Fixed spotlight alignment for mobile view

--- a/chamber/styles/mobile.css
+++ b/chamber/styles/mobile.css
@@ -73,7 +73,15 @@
     .weather {
         text-align: center; /* Center text content */
     }
+
+    .spotlights {
+        display: flex;
+        flex-direction: column;
+        align-items: center; /* Center items horizontally */
+        justify-content: center; /* Center items vertically */
+    }
   
+    /* Mobile Membership Styles */
     .membership-benefits {
         text-align: justify;
     }
@@ -81,12 +89,6 @@
     .membership-benefits ul ul {
         list-style-type: disc;
         padding-left: 20px;
-    }
-
-    .grid-view {
-        grid-template-columns: 1fr; /* Set a single column layout for mobile */
-        justify-content: center; /* Horizontally center the grid items */
-        align-items: center; /* Vertically center the grid items */
     }
 
     .photo-gallery :hover {
